# C_manager

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  smoke_test.py  start.bat  start.py
.claude/: settings.json
.claude/commands/: merge.md  review-fix.md  ship.md
.claude/skills/first-principles-thinking/: SKILL.md
.claude/skills/implementation-discipline/: SKILL.md
.claude/skills/session-discipline/: SKILL.md
configs/: config.yaml  safety_rules.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
lora-training/: .gitignore  README.md  requirements.txt
lora-training/data/: training_data.jsonl
lora-training/eval/: medium_review.txt  sample_preview.txt
lora-training/scripts/: finetune.py  generate_training_data.py
rust_scanner/: Cargo.toml  pyproject.toml
rust_scanner/src/: lib.rs  mft_reader.rs  models.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: admin.rs  drive.rs  explain.rs  explorer.rs  local_llm.rs  mod.rs  models.rs  scan.rs
src-tauri/src/safety/: mod.rs  rules.json
src-tauri/src/scanner/: mft_reader.rs  mod.rs  models.rs  usn_scanner.rs
src/analyzer/: analyzer.py  explainer.py  llm.py  models.py  prompts.py  rating.py  safety.py
src/api/: models.py  server.py
src/scanner/: core.py  knowledge_base.py  models.py  scanner.py
tests/: test_analyzer.py  test_api.py  test_explainer.py  test_safety.py  test_scanner.py
(+7 files in other folders)
