[package]
name = "c-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "c_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
mft = "0.6"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
